--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -88,6 +88,7 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
+	
 
 }
 nav li {
@@ -95,7 +96,16 @@ nav li {
 	font-size: 1.2em;
 }
 
+nav li a {
+	text-decoration: none;
+	color: black;
+}
+
 li:hover {
+	color: #B1663C;
+}
+
+a:hover {
 	color: #B1663C;
 }
 #introduction {
@@ -136,6 +146,32 @@ li:hover {
 .gallery img {
 	width: 100%;
 
+}
+.category-buttons{
+	text-align: center;
+}
+.buttons{
+	font-family: 'Syne';
+	padding: 10px 25px 10px 25px;
+	height: 37px;
+	flex-shrink: 0;
+	margin: 5px;
+	margin-bottom: 20px;
+	color: #1D6154;
+	background-color: #FFFF;
+	border-radius: 60px;
+	border: 0.5px solid #1D6154;
+	cursor: pointer;
+		
+}
+
+.buttons:hover{
+	background-color: #1D6154;
+	color: white;
+}
+.active{
+	background-color: #1D6154;
+	color: white;
 }
 #contact {
 	width: 50%;
@@ -184,5 +220,85 @@ footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
+}
+
+#login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	margin-top: 135px;
+}
+
+#login h2 {
+	font-family: 'Syne';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 30px;
+	line-height: 36px;
+	text-align: center;
+	color: #1D6154;
+	margin-bottom: 37px;
+}
+
+#login form {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+#login label {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #3D3D3D;
+	margin-bottom: 10px;
+}
+
+#login input[type="email"],
+#login input[type="password"],
+#login input[type="submit"] {
+	width: 379px;
+	height: 51px;
+	background: #FFFFFF;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	margin-bottom: 30px;
+}
+
+#login input[type="submit"] {
+	width: 179px;
+	height: 36px;
+	background: #1D6154;
+	border-radius: 60px;
+}
+
+#login p {
+	margin-top: 10px;
+	text-align: center;
+}
+
+#login a {
+	color: #1D6154;
+	text-decoration: none;
+}
+
+#error-message {
+	color: red;
+	font-size: 14px;
+	margin-top: 10px;
+	display: none;
+}
+
+.title_mes_projects {
+	display: flex;
+	justify-content: center;
+}
+
+.div_title_mes_projects {
+	display: flex;
 }
 
