--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -79,11 +79,46 @@ h1 > span {
 }
 
 h2{
+	display: inline-block;
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
 }
+
+#portfolio {
+	text-align: center;
+}
+
+.header{
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+#edit1 {
+	color: black;
+	position : relative;
+	margin-top: 10px;
+	margin-left: 50px;
+	width: 15px;
+	height: 15px;
+	text-decoration: none;
+}
+#edit1::before {
+	font-family: 'Syne';
+	font-weight: 900;
+	margin-right: 5px;
+}
+
+#edit2 {
+	display: inline-block;
+	align-items: center;
+	margin-left: 10px;
+	padding: 5px;
+	color: black;
+	text-decoration: none;
+}
+
 nav ul {
 	display: flex;
 	align-items: center;
@@ -301,4 +336,99 @@ footer nav ul {
 .div_title_mes_projects {
 	display: flex;
 }
+
+/* Styles pour la modale */
+
+:focus {
+	box-shadow: 0 0 1px blue;
+}
+.modal {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	animation: fadeIn .3s both;
+
+}
+
+.modal-wrapper{
+	overflow: auto;
+	width: 600px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	padding: 20px;
+	background: #fff;
+	animation: slideFromTop .3s both .1s;
+}
+.js-modal-close {
+	display: flex;
+	justify-content: flex-end;
+	text-decoration: none;
+	color: black ;
+}
+
+
+.modal[aria-hiden="true"] {
+	animation-name: fadeOut;
+}
+
+.modal[aria-hiden="true"] .modal-wrapper {
+	animation-name: slideToBottom;
+}
+
+
+@keyframes fadeIn {
+	from { opacity: 0; }
+	to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+	from { opacity: 1; }
+	to { opacity: 0; }
+}
+
+@keyframes slideFromTop {
+	from { transform: translateY(-50px); }
+	to { transform: translateY(0px); }
+}
+
+@keyframes slideToBottom {
+	from { transform: translateY(0px); }
+	to { transform: translateY(50px); }
+}
+/* 
+
+.modal-content {
+	display: block;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 300px;
+    padding: 20px;
+	margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	text-align: center;
+}
+.modal-content {
+	max-width: 100%;
+	max-height: 90%;
+}
+
+
+
+
+
+
+
+
+
+
+
 
