--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -56,6 +56,7 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
+	
 	margin: 50px 0
 }
 section {
@@ -92,6 +93,8 @@ h2{
 }
 
 .header{
+	display: flex;
+	justify-content: center;
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -372,7 +375,7 @@ footer nav ul {
 
 .js-modal.header.edit-buttons {
 	text-decoration: none;
-    margin-right: 250px;
+    margin-right: 350px;
     margin-top: -27px;
     color: black;
     padding: 5px;
@@ -511,10 +514,9 @@ footer nav ul {
 }
 
 .js-modal.portfolio.edit-buttons {
-	display: inline-flex;
 	text-decoration: none;
 	color: black;
-	padding: 5px;
+	padding: 8px;
 }
 
 .gallery__item-modale {
